# edge_vlm

./: .gitignore  AGENTS.md  README.md  datasets.yaml  pyproject.toml
checkpoints/max78000-tier10-top5-promptplane16-c40-30ep-q15-chosen-test-checkpoint_v1/: run_manifest.json
conf/: __init__.py  config.yaml  student_baseline.yaml  student_baseline_local.yaml  tallyqa_keras_student.yaml  tallyqa_prompt_synonyms.json  tallyqa_student.yaml  tallyqa_student_local.yaml
conf/board/: coral_micro.yaml  max78000.yaml
conf/labels/: coco_detection_labels.json  mscoco_label_map.pbtxt
conf/model/: tiny_vlm.yaml
conf/train/: lightning.yaml
coral_micro/detect_objects_serial/: CMakeLists.txt  detect_objects_serial.cc
coral_micro/tallyqa_benchmark_serial/: CMakeLists.txt  tallyqa_benchmark_serial.cc  vlm_micro_selftest_config.h
docker/: edgetpu-compiler.Dockerfile
docs/architecture/: tiny-vlm-distillation.md
docs/decisions/: 0001-initial-pipeline.md  0001-project-scaffold.md  0002-compact-student-baseline.md  0003-tallyqa-student-distillation.md  0004-tallyqa-teacher-calibration-cache.md  0005-counting-reference-models-and-density-distillation.md  0006-coral-tflite-detection-bringup.md  0007-keras-tflite-prior-student.md  0008-max78000-preview-and-profiling-contract.md  0009-max78000-people-count-adapter-qat.md  0010-max78000-cached-teacher-distillation.md  0011-faithful-coral-qat-prompt-input.md
docs/performance/: README.md  coral-detection-bringup.md  coral-tallyqa-on-device-benchmark.md  deployment-pareto-plots.md  keras-tflite-student.md  max78000-preview-and-profiling.md
docs/references/: teacher-cache-vm.md  toolchain-notes.md
external-models/: README.md
max78000/ai8x_synthesis/networks/: tallyqa-promptplane16-c40.yaml
max78000/ai8x_training/datasets/: tallyqa_count.py
max78000/ai8x_training/models/: ai85net-tallyqa-mbv3-small.py
max78000/ai8x_training/policies/: qat_policy_tallyqa_count.yaml  qat_policy_tallyqa_count_from_start.yaml  schedule-tallyqa-count-20ep-warmup.yaml  schedule-tallyqa-count-20ep.yaml  schedule-tallyqa-count-30ep-warmup.yaml  schedule-tallyqa-count-30ep.yaml  schedule-tallyqa-count.yaml
max78000/prompt_embeddings/: tallyqa_prompt_planes16_random.json
scripts/: build_student_img512_dataset.py  build_student_img512_parquet_dataset.py  build_student_uint8_dataset.py  build_tallyqa_target_dataset.py  build_yes_no_token1000_dataset.py  cache_clip_count_tallyqa_teacher.py  cache_coral_micro_tallyqa_teacher.py  cache_smolvlm_tallyqa_teacher.py  cache_smolvlm_yes_no_teacher.py  cache_tflite_coco_tallyqa_teacher.py  cache_tflite_tallyqa_teacher.py  cache_torchvision_person_tallyqa_teacher.py  cache_yolo_tallyqa_teacher.py  capture_coral_detection_serial.py  capture_coral_micro_selftest.py  compare_tallyqa_board_tflite_consistency.py  compare_tallyqa_composite_vs_argmax_teacher.py  compare_tallyqa_teacher_caches.py  compile_tallyqa_keras_skeleton_edgetpu.py  coral_detection_preview_server.py  coral_micro_debug_flashloader.py  coral_micro_stage_detection_app.py  coral_micro_stage_tallyqa_benchmark_app.py  eda_tallyqa.py  eda_tallyqa_cauldron.py  estimate_tflite_macs.py  evaluate_max78000_tallyqa_wandb_outputs.py  evaluate_prompt_embedding_surrogates.py  evaluate_tallyqa_prompt_query_quantization.py  evaluate_tallyqa_static_prompt_quantization.py  evaluate_tallyqa_student.py  export_coral_prompt_lookup_subset.py  export_dummy_raw_prompt_embedding_edgetpu.py  export_tallyqa_keras_static_prompt_coral.py  export_tallyqa_prompt_embedding_lookup.py  extend_tallyqa_prompt_embeddings_with_synonyms.py  fit_tallyqa_teacher_probability_temperature.py  gather_tallyqa_final_dataset_context.py  inspect_tflite.py  materialize_detector_poisson_binomial_logits.py  (+47 more)
scripts/artifacts/reports/: model_asset_cache_summary.json
src/: cli.py  config.py  docs.py
src/models/: __init__.py  tiny_vlm.py
src/profiling/: __init__.py  benchmark.py
src/training/: __init__.py  callbacks.py  datamodule.py  distill.py  module.py  teacher_cache.py  train.py
src/vlm_micro/: __init__.py  cauldron.py  cli.py  smolvlm_smoke.py
tests/: test_artifact_report.py  test_build_student_uint8_dataset.py  test_build_tallyqa_target_dataset.py  test_cauldron.py  test_config.py  test_coral_detection_preview_server.py  test_student_baseline.py  test_tallyqa_prompt_embeddings.py  test_tallyqa_student.py  test_tiny_vlm.py
(+13 files in other folders)
