[project]
name = "vlm-micro"
version = "0.1.0"
description = "Training, deployment, profiling, and analysis pipeline for compact VLMs on Coral Micro and MAX78000."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "hydra-core>=1.3",
    "lightning>=2.4",
    "omegaconf>=2.3",
    "python-dotenv>=1.0",
    "torch>=2.3",
    "torchvision>=0.18",
    "wandb>=0.17",
]

[project.optional-dependencies]
coral = [
    "tensorflow>=2.16",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
]

[project.scripts]
vlm-micro = "vlm_micro.cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src", "conf"]
sources = ["src"]
