[project]
name = "vlm-micro"
version = "0.1.0"
description = "Training, deployment, profiling, and analysis pipeline for compact VLMs on Coral Micro and MAX78000."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "datasets>=2.20",
    "hydra-core>=1.3",
    "lightning>=2.4",
    "matplotlib>=3.8",
    "num2words>=0.5",
    "numpy>=1.26",
    "omegaconf>=2.3",
    "pillow>=10.4",
    "pyarrow>=15",
    "python-dotenv>=1.0",
    "torch>=2.3",
    "torchinfo>=1.8",
    "torchvision>=0.18",
    "tqdm>=4.66",
    "transformers>=4.49",
    "wandb>=0.17",
]

[project.optional-dependencies]
tf = [
    "aggdraw>=1.3",
    "pydot>=2.0",
    "tensorflow>=2.16,<2.20",
    "tf-keras>=2.16,<2.20",
    "visualkeras>=0.2.0",
]
coral = [
    "pyserial>=3.5",
    "requests>=2.32",
    "aggdraw>=1.3",
    "pydot>=2.0",
    "tensorflow>=2.16,<2.20",
    "tf-keras>=2.16,<2.20",
    "visualkeras>=0.2.0",
]
max78000 = [
    "pyserial>=3.5",
]
qat = [
    "tensorflow-model-optimization>=0.8,<0.9",
    "tf-keras>=2.16,<2.20",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
]

[project.scripts]
vlm-micro = "vlm_micro.cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src", "conf"]
sources = ["src"]
